# discord-rpc-clean

./: .gitignore  CMakeLists.txt
include/: discord_rpc.h
src/: CMakeLists.txt  connection_unix.cpp  discord_rpc.cpp  serialization.cpp  serialization.h
